Fix #4 by implementing themed scrollbars.

--- a/chat.css
+++ b/chat.css
@@ -186,24 +186,44 @@ ul {
   max-height: 144px;
 }
 
-::-webkit-scrollbar-track
+.lightThemeScrollbar::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
 	background-color: #fff;
 }
-::-webkit-scrollbar
+.lightThemeScrollbar::-webkit-scrollbar
 {
 	width: 12px;
   border-radius: 10px;
 	background-color: #fff;
 }
 
-::-webkit-scrollbar-thumb
+.lightThemeScrollbar::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #555;
+}
+
+.darkThemeScrollbar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #555;
+}
+.darkThemeScrollbar::-webkit-scrollbar
+{
+	width: 12px;
+  border-radius: 10px;
+	background-color: #555;
+}
+
+.darkThemeScrollbar::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #202225;
 }
 
 /* User List */
